2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Convert array type names from trailing "[]" to leading "*".

	* postgres-meta.scm (infer-defs): ...here, in doc-comment.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘type-sql-name’ more.

	* postgres-table.scm: Import ‘(database postgres-types) type-sql-name’.
	(pgtable-manager create): Use ‘type-sql-name’.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Add (database postgres-types) proc: register-array-variant

	* postgres-types.scm (ARRAY-VARIANT-INFO): New hash table.
	(av-lookup, make-array-variant-info, av-sql-name, av-rank)
	(av-simple, av-canonical): New procs.
	(dbcoltype-lookup): Canonicalize ‘ALL’ key.
	(type-sql-name): If TYPE is an array variant, use
	the SQL name per its ‘ARRAY-VARIANT-INFO’ entry.
	(register-array-variant): New proc, exported.
	(define-db-col-type-array-variant): Use ‘register-array-variant’;
	afterwards, add COMPOSED as another key to the normal entries in
	both ‘ALL’ and ‘ARRAY-VARIANT-INFO’.

2015-01-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Name the ‘define-db-col-type-array-variant’ rest-args.

	* postgres-types.scm (define-db-col-type-array-variant):
	Add ‘args’ option to doc comment; don't mention PROCS;
	rewrite that portion to say STRINGIFIER, OBJECTIFIER directly.

2015-01-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Make ‘define-db-col-type-array-variant’ strict.

	* postgres-types.scm (define-db-col-type-array-variant):
	Check that COMPOSED is "based on" SIMPLE and that it has
	trailing square braces.  If these conditions are unmet, signal
	error.  Emphasize requirement nature of COMPOSE in doc comment.

2015-01-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: fs

	* postgres-types.scm (fs): New proc.
	(n+m-stringifier, host-stringifier, macaddr): Use it.

2014-12-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Add intermediary handling for type names.
